# py-mcelreath

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Chapter1.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb
py_bayes/: .bumpversion.cfg  CITATION.cff  LICENSE  README.md  setup.cfg
py_bayes/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
py_bayes/docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
py_bayes/src/py_bayes/: __init__.py  __main__.py  cli.py  version.py
py_bayes/tests/: __init__.py  test_version.py
src/pybayes/: utils.py
